Fixed Image Links

--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ article
 /* Facebook */
 .theblogwidgets
 {
-	background: url(../images/facebook-widget.png) no-repeat;
+	background: url(images/facebook-widget.png) no-repeat;
 	float: right;
 	height: 270px;
 	padding: 0 5px 0 46px;
